# tiger-compiler

./: .gitignore  README.md  stack.yaml  tiger-compiler.cabal
app/: Main.hs
src/: .Lex.x.swp  AST.hs  Assem.hs  Canon.hs  Compile.hs  DirectedGraph.hs  Frame.hs  Frames.hs  Lex.hs  Lex.x  Lib.hs  Liveness.hs  MipsGen.hs  Parse.hs  Parse.y  Semant.hs  Symbol.hs  Translate.hs  Tree.hs  Util.hs  runtime.s
src/AST/: Core.hs  Traversal.hs
src/Allocation/: Core.hs  DirectedGraph.hs  Liveness.hs
src/CodeGen/: Assem.hs  MipsGen.hs
src/FrontEnd/: Core.hs  Lex.x  Parse.y
src/Semant/: Core.hs  Environment.hs  Type.hs
src/Translate/: Access.hs  Canon.hs  Core.hs  Desugar.hs  Frame.hs  Tree.hs  UniqueIds.hs
test/: Spec.hs  TestCompiler.hs  TestLiveness.hs  TestSemant.hs  TestTranslate.hs  Translate.hs  Translation.hs  Typecheck.hs
test/testcases/: README.md  test51.tig  testescape1.tig  testmakeidsunique.tig
test/testcases/appel's/: test41.tig  test52.tig
test/testcases/compiler/: array1.expected  array1.tig  fn1.tig  fn2.tig  fn3.tig  fn4_recursive_factorial.tig  fn5.tig  fn6_many_params.tig  if1.tig  record1.tig  record2.tig  while1.expected  while1.tig
test/testcases/translation/: escapes1.tig  makeidsunique1.tig
