name:                tiger-compiler
version:             0.1.0.0
synopsis:            Modern Compiler Implementation in Standard ML by Andrew Appel
description:         Please see README.md
homepage:            http://github.com/disalvn/tiger-compiler#readme
--license:             MIT
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Symbol, Util
                     , FrontEnd.Lex, FrontEnd.Parse, FrontEnd.Core
                     , AST.Core, AST.Traversal
                     , Semant.Type, Semant.Environment, Semant.Core
                     , Translate.Core, Translate.Tree, Translate.Frame, Translate.Canon
                     , Translate.UniqueIds, Translate.Access
                     , CodeGen.Assem, CodeGen.MipsGen
                     , Allocation.Liveness, Allocation.DirectedGraph, Allocation.Core
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
                     , containers
                     , lens >= 4.1
                     , kan-extensions >=5 && < 6
  default-language:    Haskell2010

executable tiger-compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiger-compiler
  default-language:    Haskell2010

test-suite tiger-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       TestSemant, TestTranslate, TestLiveness
  main-is:             Spec.hs
  build-depends:       base
                     , tiger-compiler
                     , HUnit
                     , mtl
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/disalvjn/tiger-compiler
